# ImageFlippingHttpServer

./: CMakeLists.txt  README.md  core.cpp  core.h  main.cpp  script.sh
opencv/lib/: libopencv_imgcodecs.so.4.6.0
